0.4.1
=====
- [feature] Explicit error message describing the case
  when downgrade --sql is used without specifying
  specific start/end versions. #66

- [bug] Removed erroneous "emit_events" attribute
  from operations.create_table() documentation.
  #81

0.4.0
=====
- [feature] Support for tables in alternate schemas
  has been added fully to all operations, as well as to
  the autogenerate feature.  When using autogenerate,
  specifying the flag include_schemas=True to
  Environment.configure() will also cause autogenerate
  to scan all schemas located by Inspector.get_schema_names(),
  which is supported by *some* (but not all)
  SQLAlchemy dialects including Postgresql.
  *Enormous* thanks to Bruno Binet for a huge effort
  in implementing as well as writing tests.  #33.

- [feature] The command line runner has been organized
  into a reusable CommandLine object, so that other
  front-ends can re-use the argument parsing built
  in.  #70

- [feature] Added "stdout" option to Config, provides
  control over where the "print" output of commands like
  "history", "init", "current" etc. are sent.  #43

- [bug] Fixed the "multidb" template which was badly out
  of date.   It now generates revision files using
  the configuration to determine the different
  upgrade_<xyz>() methods needed as well, instead of
  needing to hardcode these.  Huge thanks to
  BryceLohr for doing the heavy lifting here.  #71

- [bug] Fixed the regexp that was checking for .py files
  in the version directory to allow any .py file through.
  Previously it was doing some kind of defensive checking,
  probably from some early notions of how this directory
  works, that was prohibiting various filename patterns
  such as those which begin with numbers.  #72

- [bug] Fixed MySQL rendering for server_default which
  didn't work if the server_default was a generated
  SQL expression.  Courtesy Moriyoshi Koizumi.

- [feature] Added support for alteration of MySQL